traefik.deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: traefik
  namespace: kube-public
  labels:
    app: traefik
spec:
  selector:
    matchLabels:
      app: traefik
  replicas: 2
  template:
    metadata:
      labels:
        app: traefik
    spec:
      #restartPolicy: Always
      serviceAccountName: traefik-ingress-controller
      containers:
      - name: traefik
        image: traefik:1.7
        resources:
          limits:
            memory: "50Mi"
            cpu: "50m"
        ports:
          - name: http 
            containerPort: 80
          - name: admin 
            containerPort: 8080
        args:
        - --api
        - --kubernetes
        - --logLevel=INFO
      restartPolicy: Always
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: kubernetes.io/hostname
                operator: In
                values:
                  - epitech-s4ql
                  - epitech-s4qe
