poll.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: poll-service
  namespace: default
spec:
  type: ClusterIP
  selector:
   app: poll
  ports:
  - name: http
    port: 80
    targetPort: 80
