traefik.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: traefik-service
  namespace: kube-public
spec:
  type: NodePort
  selector:
    app: traefik
  ports:
  - port: 80
    nodePort: 30021
    targetPort: 80
    protocol: TCP
    name: http
  - port: 8080
    nodePort: 30042
    targetPort: 8080
    protocol: TCP
    name: admin
