result.ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: result-ingress
  annotations:
    kubernetes.io/ingress.class: traefik
    #traefik.frontend.passHostHeader: "true"
    #traefik.backend.loadbalancer.sticky: "true"
spec:
  rules:
  - host: result.dop.io
    http:
      paths:
      - path: /
        backend:
          serviceName: result-service
          servicePort: http
